# FiretunerTerminal

./: .gitignore  API_LIBRARY.md  README.md  TYPE_REFERENCE.md  completions.json  pyproject.toml  requirements.txt
civ7_terminal/: __init__.py  __main__.py  app.py  completions.py  connection.py  extract_types.py  mcp_server.py  protocol.py  session_logger.py
civ7_terminal/widgets/: __init__.py  session.py  status_bar.py  terminal.py
docs/plans/: 2026-02-26-autocomplete.md
examples/: mcp-global.json  mcp-venv.json
