[project]
name = "civ7-terminal"
version = "0.1.0"
description = "Debug terminal for Civilization 7"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "pyperclip>=1.8.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
civ7-terminal = "civ7_terminal.__main__:main"
civ7-mcp = "civ7_terminal.mcp_server:main"
civ7-extract-types = "civ7_terminal.extract_types:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
